# All-Model-Chat

./: .gitignore  package.json
.github/workflows/: release.yml
all-model-chat/: index.tsx  package.json  tailwind.config.js  vite.config.ts
all-model-chat/styles/: main.css  vendor-local.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
